--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <link rel="icon" href="%PUBLIC_URL%/media/dnd-logo.png">
   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-  <title>React App</title>
+  <title>D&D Session</title>
 </head>
 
 <body>
